api/swim_form/src/tests/derive/form/double_kind.stderr
error: Field has multiple kind tags
  --> $DIR/src/tests/derive/form/double_kind.rs:18:14
   |
18 |     #[derive(Form)]
   |              ^^^^
